seperate class files
- seperate class files: one class at one file.

--- a/ioc/CMakeLists.txt
+++ b/ioc/CMakeLists.txt
@@ -5,4 +5,21 @@ set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
-add_executable(${PROJECT_NAME} main.cpp)
+set(FILE_SOURCES
+  "main.cpp"
+  "printer.cpp"
+  "timer.cpp"
+  "worker.cpp"
+)
+set(FILE_HEADERS
+  "common.hpp"
+  "printer.hpp"
+  "task.hpp"
+  "timer.hpp"
+  "worker.hpp"
+)
+
+add_executable(${PROJECT_NAME}
+  ${FILE_SOURCES}
+  ${FILE_HEADERS}
+)
